--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
    <body>
       <div id="imgbg" class="img-bg">
          <div class="page-area">
-            <h1 class="txt-title">myDOMOS</h1>
-            <h3 class="txt-claim">Domotics tools</h3>
+            <h1 class="txt-title">myDOMOS 0.1</h1>
+            <h3 class="txt-claim">Custom Domotics Tools</h3>
             <button class="btn-home">Accedi</button>
          </div>
       </div>
